--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "kurier.doc.tar.xz": c1e3fa9f12003510e43431df4fbd0ae7fa745f76
-  "kurier.tar.xz": 8703f426fe55323d0952da19a7a5e376280cd237
+  kurier.doc.r19612.tar.xz: b30aac656be1e311871f7ac3fc883547b518bb2a
+  kurier.r19612.tar.xz: 40022cf87833aaff15cb6f6204b643761d1429e9
